# UFS_UTILS

docs/: user_guide.md
reg_tests/lamda_utils/: driver.hera.sh  driver.orion.sh  driver.wcoss_cray.sh  driver.wcoss_dell_p3.sh  move_DA_update_data.sh
sorc/: CMakeLists.txt
sorc/lamda_utils.fd/: CMakeLists.txt
sorc/lamda_utils.fd/create_expanded_restart_files_for_DA.fd/: CMakeLists.txt  create_expanded_restart_files_for_DA.F90  hold_read.F90
sorc/lamda_utils.fd/docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
sorc/lamda_utils.fd/move_DA_update_data.fd/: CMakeLists.txt  move_DA_update_data.F90
sorc/lamda_utils.fd/prep_for_regional_DA.fd/: CMakeLists.txt  hold_check.F90  prep_for_regional_DA.F90
tests/: CMakeLists.txt
tests/lamda_utils/: CMakeLists.txt  ftst_check_grid_sfc.F90  ftst_read_field_table.F90  save_ftst_read_field_table.F90
tests/lamda_utils/data/: grid_spec.nc  input.nml  sfc_data.nc
